# ChangeLog for dev-perl/Lingua-Stem
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lingua-Stem/ChangeLog,v 1.30 2012/06/24 12:58:55 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  31 Mar 2012; Torsten Veller <tove@gentoo.org> -Lingua-Stem-0.83.ebuild:
  Cleanup

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> Lingua-Stem-0.83.ebuild,
  Lingua-Stem-0.840.0.ebuild:
  Drop ia64/sparc keywords

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Lingua-Stem-0.840.0.ebuild:
  x86 stable wrt bug #400159

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> Lingua-Stem-0.840.0.ebuild:
  Stable for amd64, wrt bug #400159

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Lingua-Stem-0.84.ebuild:
  Cleanup

*Lingua-Stem-0.840.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +Lingua-Stem-0.840.0.ebuild:
  Change version scheme

*Lingua-Stem-0.84 (30 Apr 2010)

  30 Apr 2010; Torsten Veller <tove@gentoo.org> +Lingua-Stem-0.84.ebuild:
  Version bump

  18 Nov 2008; Torsten Veller <tove@gentoo.org> Lingua-Stem-0.83.ebuild:
  New virtuals: module-build

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Lingua-Stem-0.81.ebuild,
  -Lingua-Stem-0.82.ebuild, Lingua-Stem-0.83.ebuild:
  Cleanup

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Lingua-Stem-0.83.ebuild:
  amd64 stable

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Lingua-Stem-0.83.ebuild:
  Stable on sparc

  29 Jul 2007; Raúl Porcel <armin76@gentoo.org> Lingua-Stem-0.83.ebuild:
  ia64/x86 stable

*Lingua-Stem-0.83 (25 Jun 2007)

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Lingua-Stem-0.83.ebuild:
  Version bump

  13 Mar 2007; Andrej Kacian <ticho@gentoo.org> Lingua-Stem-0.82.ebuild:
  Stable on x86, bug #169152.

  16 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Lingua-Stem-0.81.ebuild, Lingua-Stem-0.82.ebuild:
  Ebuild maintenance
