@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lingua-Stem/Lingua-Stem-0.840.0.ebuild,v 1.4 2012/03/25 16:25:07 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lingua-Stem/Lingua-Stem-0.840.0-r1.ebuild,v 1.1 2014/08/23 22:17:32 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=SNOWHARE
 MODULE_VERSION=0.84
